[gd_scene load_steps=10 format=2]

[ext_resource path="res://weapons/weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/weapons/ranged/materials_gun/qmtato_materials_gun.png" type="Texture" id=2]
[ext_resource path="res://resources/shaders/outline.gdshader" type="Shader" id=3]
[ext_resource path="res://overlap/hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/weapons/ranged/materials_gun/materials_gun.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/width = 2.0
shader_param/outline_color = Color( 1, 1, 1, 1 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 72.4431

[node name="SMG" instance=ExtResource( 1 )]
script = ExtResource( 5 )
outline_shader_mat = SubResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 24, 0 )
texture = ExtResource( 2 )

[node name="AttractArea" parent="Sprite" index="1" instance=ExtResource( 4 )]
scale = Vector2( 5, 5 )
collision_mask = 64
monitoring = true
monitorable = false
script = null

[node name="Collision" parent="Sprite/AttractArea" index="0"]
shape = SubResource( 4 )

[node name="PickupArea" type="Area2D" parent="Sprite" index="2"]
visible = false
position = Vector2( -24, 0 )
scale = Vector2( 1, 1 )
collision_layer = 0
collision_mask = 32768
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/PickupArea" index="0"]
position = Vector2( 0, -24 )
shape = SubResource( 3 )

[node name="Muzzle" parent="Sprite" index="3"]
position = Vector2( 32, 0 )

[node name="Attach" parent="." index="1"]
position = Vector2( 2, 16 )

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Sprite/AttractArea" to="." method="_on_AttractArea_area_entered"]
[connection signal="area_entered" from="Sprite/PickupArea" to="." method="_on_PickupArea_area_entered"]

[editable path="Sprite/Hitbox"]
[editable path="Sprite/AttractArea"]
